<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <PreferenceCategory
        android:title="Settings"
        android:key="pref_key_storage_settings">
        <CheckBoxPreference
            android:key="pref_key_light_on_start"
            android:title="@string/settings_lightstartup"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="pref_key_pi_lightpin"
            android:title="@string/settings_lightpin"
            android:summary="@string/settings_lightpin_more"
            android:defaultValue="35"/>
        <EditTextPreference
            android:key="pref_key_pi_ip"
            android:title="@string/settings_piaddress"
            android:defaultValue="192.168.3.14"/>
        <EditTextPreference
            android:enabled="false"
            android:key="pref_key_pi_ip_alt"
            android:title="@string/settings_piaddressalt"
            android:summary="@string/settings_piaddressalt_more"
            android:defaultValue="192.168.0.100"/>
        <CheckBoxPreference
            android:key="pref_key_auth"
            android:title="@string/settings_auth"
            android:summary="@string/settings_auth_more"
            android:defaultValue="false" />
        <EditTextPreference
            android:dependency="pref_key_auth"
            android:key="pref_key_user"
            android:title="@string/settings_user"
            android:defaultValue=""/>
        <EditTextPreference
            android:dependency="pref_key_auth"
            android:key="pref_key_password"
            android:title="@string/settings_password"
            android:inputType="textPassword"
            android:defaultValue=""/>
        <Preference
            android:key="pref_key_author"
            android:summary="@string/settings_about"></Preference>
    </PreferenceCategory>
</PreferenceScreen>